articles added and subpages created

--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/drinkz.png" type="image/x-icon">
+    <link rel="icon" href="img/logo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="css/page-layout.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/index-style.css">
     <link rel="stylesheet" href="css/slideshow.css">
+    <link rel="stylesheet" href="css/index-main.css">
     <title>Drinkz</title>
 </head>
 <body>
     <header>
       <nav>
-        <ul>
-          <li><a href="#">Cocktails</li></a>
-          <li><a href="#">Mocktails</li></a>
-          <li><a href="#">Sjusser</li></a>
-          <li><a href="#">Shots</li></a>
-          <li><a href="#">Typer af alkohol</li></a>
-        </ul>
+        <a href="#"><img src="img/logo.svg" alt=""></a>
+        <div>
+          <a href="cocktails.html">Cocktails</a>
+          <a href="#">Mocktails</a>
+          <a href="#">Sjusser</a>
+          <a href="#">Shots</a>
+          <a href="#">Alkoholtyper</a>
+        </div>
       </nav>
     </header>
     <main> 
@@ -43,26 +45,32 @@
         </section>
         <article>
           <section>
+            <div class="section-heading">
+              <span class="line"></span>
+              <span class="section-text">News</span>
+              <span class="line"></span>
+            </div>
+            
             <div class="row">
               <div class="column left">
                 <div class="label">
                   <img src="img/tequila.webp" alt="">
                   <h3>Tequila</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ab veritatis esse repellat magnam et labore sit! Quasi magni voluptatibus ut obcaecati quaerat officiis reiciendis, amet temporibus numquam commodi facere est iusto maiores iste reprehenderit sunt ipsam aut tenetur quas alias. Omnis sequi fugit voluptatum veritatis unde. Perspiciatis, rerum minima.</p>
+                  <p>Tequila er en ikonisk mexicansk spiritus lavet af agaveplanten. Med sin karakteristiske smag og stærke alkoholindhold er tequila elsket verden over. Fra traditionelle margaritas til lækre shots med salt og citron er tequila synonymt med livlig feststemning og uforglemmelige øjeblikke.</p>
                 </div>
               </div>
               <div class="column mid">
                 <div class="label">
                   <img src="img/martini.webp" alt="">
                   <h3>Martini variationer</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, facilis.</p>
+                  <p>Martinier er en elegant cocktail bestående af gin eller vodka og tør vermouth, serveret i et køligt glas. Den perfekte balance mellem spiritus og vermouth skaber en forfriskende og sofistikeret smagsoplevelse. Martinien er et tidløst valg for dem, der søger klassisk raffinement i deres drinks.</p>
                 </div>
               </div>
               <div class="column right">
                 <div class="label">
-                  <img src="img/martini.webp" alt="">
+                  <img src="img/sjusser.webp" alt="">
                   <h3>Martini variationer</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, facilis.</p>
+                  <p>Sjusser er en klassisk dansk cocktail lavet af en blanding af sodavand og alkohol efter valg. Denne forfriskende og boblende drink er populær til sociale sammenkomster og fester. Med sin lette smag af alkohol og brusende sodavand er sjusser en favorit blandt både unge og ældre danskere.</p>
                 </div>
               </div>
             </div>
@@ -70,23 +78,17 @@
             <div class="row">
               <div class="column left">
                 <div class="label">
-                  <img src="img/tequila.webp" alt="">
-                  <h3>Tequila</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ab veritatis esse repellat magnam et labore sit! Quasi magni voluptatibus ut obcaecati quaerat officiis reiciendis, amet temporibus numquam commodi facere est iusto maiores iste reprehenderit sunt ipsam aut tenetur quas alias. Omnis sequi fugit voluptatum veritatis unde. Perspiciatis, rerum minima.</p>
+                  <img src="img/mixing.webp" alt="">
+                  <h3>Opskrifter</h3>
+                  <p>At følge opskrifter på drinks er vigtigt for at sikre den rette balance af ingredienser, smag og alkoholstyrke. Det sikrer konsistens og kvalitet i hver servering og hjælper med at undgå mislykkede eller ubalancerede resultater. Præcision i opskriften garanterer en fornøjelig og velafbalanceret drinkoplevelse hver gang.</p>
                 </div>
               </div>
               <div class="column mid">
                 <div class="label">
-                  <img src="img/martini.webp" alt="">
-                  <h3>Martini variationer</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, facilis.</p>
-                </div>
-              </div>
-              <div class="column right">
-                <div class="label">
-                  <img src="img/martini.webp" alt="">
-                  <h3>Martini variationer</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, facilis.</p>
+                  <img src="img/summer.webp" alt="">
+                  <h3>Sommer drinks</h3>
+                  <p>
+                    Om sommeren er intet mere forfriskende end at nyde drinks i godt selskab under solens varme stråler. Med kølige cocktails og lækre frugtdrinks kan man slappe af og skabe uforglemmelige minder på terrassen, ved stranden eller ved poolen. Det er den perfekte måde at nyde sommerens afslappede stemning på.</p>
                 </div>
               </div>
             </div>
