underline in navbar added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="#">Mocktails</a>
           <a href="#">Sjusser</a>
           <a href="#">Shots</a>
-          <a href="#">Alkoholtyper</a>
+          <a href="alkoholtyper.html">Alkoholtyper</a>
         </div>
       </nav>
     </header>
