text added to labels

--- a/alkoholtyper.html
+++ b/alkoholtyper.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="img/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/page-layout.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/index-main.css">
+    <link rel="stylesheet" href="css/alkoholtyper.css">
     <title>Typer af alkohol</title>
 </head>
 <body>
@@ -18,19 +18,13 @@
             <a href="#">Mocktails</a>
             <a href="#">Sjusser</a>
             <a href="#">Shots</a>
-            <a href="alkoholtyper.html">Alkoholtyper</a>
+            <a class="hjem" href="alkoholtyper.html">Alkoholtyper</a>
           </div>
         </nav>
       </header>
       <main> 
           <article>
-            <section>
-              <div class="section-heading">
-                <span class="line"></span>
-                <span class="section-text">News</span>
-                <span class="line"></span>
-              </div>
-              
+            <section>              
               <div class="row">
                 <div class="column left">
                   <div class="label">
@@ -41,16 +35,16 @@
                 </div>
                 <div class="column mid">
                   <div class="label">
-                    <img src="img/martini.webp" alt="">
-                    <h3>Martini variationer</h3>
-                    <p>Martinier er en elegant cocktail bestående af gin eller vodka og tør vermouth, serveret i et køligt glas. Den perfekte balance mellem spiritus og vermouth skaber en forfriskende og sofistikeret smagsoplevelse. Martinien er et tidløst valg for dem, der søger klassisk raffinement i deres drinks.</p>
+                    <img src="img/rom.webp" alt="">
+                    <h3>Rom</h3>
+                    <p>Rom er en ældgammel spiritus, der stammer fra sukkerrørssaften. Med sin rige historie og komplekse smagsprofil er rom elsket verden over. Fra den søde og krydrede smag af rom til den subtile dybde af lagring, tilbyder denne spiritus en oplevelse af varme og eventyr i hver slurk.</p>
                   </div>
                 </div>
                 <div class="column right">
                   <div class="label">
-                    <img src="img/sjusser.webp" alt="">
-                    <h3>Martini variationer</h3>
-                    <p>Sjusser er en klassisk dansk cocktail lavet af en blanding af sodavand og alkohol efter valg. Denne forfriskende og boblende drink er populær til sociale sammenkomster og fester. Med sin lette smag af alkohol og brusende sodavand er sjusser en favorit blandt både unge og ældre danskere.</p>
+                    <img src="img/gin.webp" alt="">
+                    <h3>Gin</h3>
+                    <p>Gin er en populær spiritus kendt for sin komplekse smag og aromaer af enebær og andre botanicals. Denne alsidige spiritus bruges i et væld af cocktails, fra klassiske gin og tonics til forfriskende martinier. Gin er blevet en favorit blandt cocktailentusiaster for sin evne til at skabe smagfulde og unikke drikkeoplevelser.</p>
                   </div>
                 </div>
               </div>
@@ -58,17 +52,23 @@
               <div class="row">
                 <div class="column left">
                   <div class="label">
-                    <img src="img/mixing.webp" alt="">
-                    <h3>Opskrifter</h3>
-                    <p>At følge opskrifter på drinks er vigtigt for at sikre den rette balance af ingredienser, smag og alkoholstyrke. Det sikrer konsistens og kvalitet i hver servering og hjælper med at undgå mislykkede eller ubalancerede resultater. Præcision i opskriften garanterer en fornøjelig og velafbalanceret drinkoplevelse hver gang.</p>
+                    <img src="img/vodka.webp" alt="">
+                    <h3>Vodka</h3>
+                    <p>Vodka er en klar og neutral spiritus, der er elsket for sin alsidighed og evne til at blande sig godt med forskellige mixere. Med sin rene smag og neutralitet er vodka en favorit i et væld af cocktails, fra den klassiske vodka tonic til forfriskende cosmopolitans. Vodka er synonym med enkelt og alligevel sofistikeret drikkeglæde.</p>
                   </div>
                 </div>
                 <div class="column mid">
                   <div class="label">
-                    <img src="img/summer.webp" alt="">
-                    <h3>Sommer drinks</h3>
-                    <p>
-                      Om sommeren er intet mere forfriskende end at nyde drinks i godt selskab under solens varme stråler. Med kølige cocktails og lækre frugtdrinks kan man slappe af og skabe uforglemmelige minder på terrassen, ved stranden eller ved poolen. Det er den perfekte måde at nyde sommerens afslappede stemning på.</p>
+                    <img src="img/whiskey.webp" alt="">
+                    <h3>Whiskey</h3>
+                    <p>Whiskey er en ældgammel spiritus, der har vundet hjerter over hele verden med sin komplekse smag og dybe karakter. Fra den røgede peatiness af skotsk single malt til den søde karamelagtige varme af amerikansk bourbon, er whiskey synonym med tradition, håndværk og ren nydelse.</p>
+                  </div>
+                </div>
+                <div class="column right">
+                  <div class="label">
+                    <img src="img/snaps.webp" alt="">
+                    <h3>Snaps</h3>
+                    <p>Snaps er en dansk traditionel spiritus, ofte drukket som et supplement til måltider eller ved særlige lejligheder. Med sin krydrede smag og karakteristiske aroma tilføjer snaps en festlig stemning til enhver sammenkomst. Fra traditionelle krydderier som kommen og dild til mere moderne varianter, er snaps en integreret del af dansk kultur.</p>
                   </div>
                 </div>
               </div>
