--- a/cocktails.html
+++ b/cocktails.html
@@ -14,7 +14,7 @@
         <nav>
           <a href="index.html"><img src="img/logo.svg" alt=""></a>
           <div>
-            <a href="cocktails.html">Cocktails</a>
+            <a class="hjem" href="cocktails.html">Cocktails</a>
             <a href="#">Mocktails</a>
             <a href="#">Sjusser</a>
             <a href="#">Shots</a>
