--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
             
             <div class="row">
               <div class="column left">
-                <div class="label">
-                  <img src="img/tequila.webp" alt="">
-                  <h3>Tequila</h3>
-                  <p>Tequila er en ikonisk mexicansk spiritus lavet af agaveplanten. Med sin karakteristiske smag og stærke alkoholindhold er tequila elsket verden over. Fra traditionelle margaritas til lækre shots med salt og citron er tequila synonymt med livlig feststemning og uforglemmelige øjeblikke.</p>
-                </div>
+                <a href="https://www.facebook.com/">
+                  <div class="label">
+                    <img src="img/tequila.webp" alt="">
+                    <h3>Tequila</h3>
+                    <p>Tequila er en ikonisk mexicansk spiritus lavet af agaveplanten. Med sin karakteristiske smag og stærke alkoholindhold er tequila elsket verden over. Fra traditionelle margaritas til lækre shots med salt og citron er tequila synonymt med livlig feststemning og uforglemmelige øjeblikke.</p>
+                  </div>
+                </a>
               </div>
               <div class="column mid">
                 <div class="label">
