--- a/index.html
+++ b/index.html
@@ -62,36 +62,44 @@
                 </a>
               </div>
               <div class="column mid">
-                <div class="label">
-                  <img src="img/martini.webp" alt="">
-                  <h3>Martini variationer</h3>
-                  <p>Martinier er en elegant cocktail bestående af gin eller vodka og tør vermouth, serveret i et køligt glas. Den perfekte balance mellem spiritus og vermouth skaber en forfriskende og sofistikeret smagsoplevelse. Martinien er et tidløst valg for dem, der søger klassisk raffinement i deres drinks.</p>
-                </div>
+                <a href="https://www.facebook.com/">
+                  <div class="label">
+                    <img src="img/martini.webp" alt="">
+                    <h3>Martini variationer</h3>
+                    <p>Martinier er en elegant cocktail bestående af gin eller vodka og tør vermouth, serveret i et køligt glas. Den perfekte balance mellem spiritus og vermouth skaber en forfriskende og sofistikeret smagsoplevelse. Martinien er et tidløst valg for dem, der søger klassisk raffinement i deres drinks.</p>
+                  </div>
+                </a>
               </div>
               <div class="column right">
-                <div class="label">
-                  <img src="img/sjusser.webp" alt="">
-                  <h3>Martini variationer</h3>
-                  <p>Sjusser er en klassisk dansk cocktail lavet af en blanding af sodavand og alkohol efter valg. Denne forfriskende og boblende drink er populær til sociale sammenkomster og fester. Med sin lette smag af alkohol og brusende sodavand er sjusser en favorit blandt både unge og ældre danskere.</p>
-                </div>
+                <a href="https://www.facebook.com/">
+                  <div class="label">
+                    <img src="img/sjusser.webp" alt="">
+                    <h3>Martini variationer</h3>
+                    <p>Sjusser er en klassisk dansk cocktail lavet af en blanding af sodavand og alkohol efter valg. Denne forfriskende og boblende drink er populær til sociale sammenkomster og fester. Med sin lette smag af alkohol og brusende sodavand er sjusser en favorit blandt både unge og ældre danskere.</p>
+                  </div>
+                </a>
               </div>
             </div>
 
             <div class="row">
               <div class="column left">
-                <div class="label">
-                  <img src="img/mixing.webp" alt="">
-                  <h3>Opskrifter</h3>
-                  <p>At følge opskrifter på drinks er vigtigt for at sikre den rette balance af ingredienser, smag og alkoholstyrke. Det sikrer konsistens og kvalitet i hver servering og hjælper med at undgå mislykkede eller ubalancerede resultater. Præcision i opskriften garanterer en fornøjelig og velafbalanceret drinkoplevelse hver gang.</p>
-                </div>
+                <a href="https://www.facebook.com/">
+                  <div class="label">
+                    <img src="img/mixing.webp" alt="">
+                    <h3>Opskrifter</h3>
+                    <p>At følge opskrifter på drinks er vigtigt for at sikre den rette balance af ingredienser, smag og alkoholstyrke. Det sikrer konsistens og kvalitet i hver servering og hjælper med at undgå mislykkede eller ubalancerede resultater. Præcision i opskriften garanterer en fornøjelig og velafbalanceret drinkoplevelse hver gang.</p>
+                  </div>
+                </a>
               </div>
               <div class="column mid">
-                <div class="label">
-                  <img src="img/summer.webp" alt="">
-                  <h3>Sommer drinks</h3>
-                  <p>
-                    Om sommeren er intet mere forfriskende end at nyde drinks i godt selskab under solens varme stråler. Med kølige cocktails og lækre frugtdrinks kan man slappe af og skabe uforglemmelige minder på terrassen, ved stranden eller ved poolen. Det er den perfekte måde at nyde sommerens afslappede stemning på.</p>
-                </div>
+                <a href="https://www.facebook.com/">
+                  <div class="label">
+                    <img src="img/summer.webp" alt="">
+                    <h3>Sommer drinks</h3>
+                    <p>
+                      Om sommeren er intet mere forfriskende end at nyde drinks i godt selskab under solens varme stråler. Med kølige cocktails og lækre frugtdrinks kan man slappe af og skabe uforglemmelige minder på terrassen, ved stranden eller ved poolen. Det er den perfekte måde at nyde sommerens afslappede stemning på.</p>
+                  </div>
+                </a>
               </div>
             </div>
           </section>
