--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <nav>
         <a href="#"><img src="img/logo.svg" alt=""></a>
         <div>
-          <a href="cocktails.html">Cocktails</a>
+          <a href="https://magn3054.github.io/drinks/cocktails.html">Cocktails</a>
           <a href="#">Mocktails</a>
           <a href="#">Sjusser</a>
           <a href="#">Shots</a>
-          <a href="alkoholtyper.html">Alkoholtyper</a>
+          <a href="https://magn3054.github.io/drinks/alkoholtyper.html">Alkoholtyper</a>
         </div>
       </nav>
     </header>
