--- a/alkoholtyper.html
+++ b/alkoholtyper.html
@@ -12,13 +12,13 @@
 <body>
     <header>
         <nav>
-          <a href="index.html"><img src="img/logo.svg" alt=""></a>
+          <a href="https://magn3054.github.io/drinks/index.html"><img src="img/logo.svg" alt=""></a>
           <div>
-            <a href="cocktails.html">Cocktails</a>
+            <a href="https://magn3054.github.io/drinks/cocktails.html">Cocktails</a>
             <a href="#">Mocktails</a>
             <a href="#">Sjusser</a>
             <a href="#">Shots</a>
-            <a class="hjem" href="alkoholtyper.html">Alkoholtyper</a>
+            <a class="hjem" href="https://magn3054.github.io/drinks/alkoholtyper.html">Alkoholtyper</a>
           </div>
         </nav>
       </header>
@@ -27,49 +27,61 @@
             <section>              
               <div class="row">
                 <div class="column left">
-                  <div class="label">
-                    <img src="img/tequila.webp" alt="">
-                    <h3>Tequila</h3>
-                    <p>Tequila er en ikonisk mexicansk spiritus lavet af agaveplanten. Med sin karakteristiske smag og stærke alkoholindhold er tequila elsket verden over. Fra traditionelle margaritas til lækre shots med salt og citron er tequila synonymt med livlig feststemning og uforglemmelige øjeblikke.</p>
-                  </div>
+                  <a href="https://magn3054.github.io/drinks/long-drinks.html">
+                    <div class="label">
+                      <img src="img/tequila.webp" alt="">
+                      <h3>Tequila</h3>
+                      <p>Tequila er en ikonisk mexicansk spiritus lavet af agaveplanten. Med sin karakteristiske smag og stærke alkoholindhold er tequila elsket verden over. Fra traditionelle margaritas til lækre shots med salt og citron er tequila synonymt med livlig feststemning og uforglemmelige øjeblikke.</p>
+                    </div>
+                  </a>
                 </div>
                 <div class="column mid">
-                  <div class="label">
-                    <img src="img/rom.webp" alt="">
-                    <h3>Rom</h3>
-                    <p>Rom er en ældgammel spiritus, der stammer fra sukkerrørssaften. Med sin rige historie og komplekse smagsprofil er rom elsket verden over. Fra den søde og krydrede smag af rom til den subtile dybde af lagring, tilbyder denne spiritus en oplevelse af varme og eventyr i hver slurk.</p>
-                  </div>
+                  <a href="https://magn3054.github.io/drinks/long-drinks.html">
+                    <div class="label">
+                      <img src="img/rom.webp" alt="">
+                      <h3>Rom</h3>
+                      <p>Rom er en ældgammel spiritus, der stammer fra sukkerrørssaften. Med sin rige historie og komplekse smagsprofil er rom elsket verden over. Fra den søde og krydrede smag af rom til den subtile dybde af lagring, tilbyder denne spiritus en oplevelse af varme og eventyr i hver slurk.</p>
+                    </div>
+                  </a>
                 </div>
                 <div class="column right">
-                  <div class="label">
-                    <img src="img/gin.webp" alt="">
-                    <h3>Gin</h3>
-                    <p>Gin er en populær spiritus kendt for sin komplekse smag og aromaer af enebær og andre botanicals. Denne alsidige spiritus bruges i et væld af cocktails, fra klassiske gin og tonics til forfriskende martinier. Gin er blevet en favorit blandt cocktailentusiaster for sin evne til at skabe smagfulde og unikke drikkeoplevelser.</p>
-                  </div>
+                  <a href="https://magn3054.github.io/drinks/long-drinks.html">
+                    <div class="label">
+                      <img src="img/gin.webp" alt="">
+                      <h3>Gin</h3>
+                      <p>Gin er en populær spiritus kendt for sin komplekse smag og aromaer af enebær og andre botanicals. Denne alsidige spiritus bruges i et væld af cocktails, fra klassiske gin og tonics til forfriskende martinier. Gin er blevet en favorit blandt cocktailentusiaster for sin evne til at skabe smagfulde og unikke drikkeoplevelser.</p>
+                    </div>
+                  </a>
                 </div>
               </div>
   
               <div class="row">
                 <div class="column left">
-                  <div class="label">
-                    <img src="img/vodka.webp" alt="">
-                    <h3>Vodka</h3>
-                    <p>Vodka er en klar og neutral spiritus, der er elsket for sin alsidighed og evne til at blande sig godt med forskellige mixere. Med sin rene smag og neutralitet er vodka en favorit i et væld af cocktails, fra den klassiske vodka tonic til forfriskende cosmopolitans. Vodka er synonym med enkelt og alligevel sofistikeret drikkeglæde.</p>
-                  </div>
+                  <a href="https://magn3054.github.io/drinks/long-drinks.html">
+                    <div class="label">
+                      <img src="img/vodka.webp" alt="">
+                      <h3>Vodka</h3>
+                      <p>Vodka er en klar og neutral spiritus, der er elsket for sin alsidighed og evne til at blande sig godt med forskellige mixere. Med sin rene smag og neutralitet er vodka en favorit i et væld af cocktails, fra den klassiske vodka tonic til forfriskende cosmopolitans. Vodka er synonym med enkelt og alligevel sofistikeret drikkeglæde.</p>
+                    </div>
+                  </a>
                 </div>
                 <div class="column mid">
-                  <div class="label">
-                    <img src="img/whiskey.webp" alt="">
-                    <h3>Whiskey</h3>
-                    <p>Whiskey er en ældgammel spiritus, der har vundet hjerter over hele verden med sin komplekse smag og dybe karakter. Fra den røgede peatiness af skotsk single malt til den søde karamelagtige varme af amerikansk bourbon, er whiskey synonym med tradition, håndværk og ren nydelse.</p>
-                  </div>
+                  <a href="https://magn3054.github.io/drinks/long-drinks.html">
+                    <div class="label">
+                      <img src="img/whiskey.webp" alt="">
+                      <h3>Whiskey</h3>
+                      <p>Whiskey er en ældgammel spiritus, der har vundet hjerter over hele verden med sin komplekse smag og dybe karakter. Fra den røgede peatiness af skotsk single malt til den søde karamelagtige varme af amerikansk bourbon, er whiskey synonym med tradition, håndværk og ren nydelse.</p>
+                    </div>
+                  </a>
                 </div>
                 <div class="column right">
-                  <div class="label">
-                    <img src="img/snaps.webp" alt="">
-                    <h3>Snaps</h3>
-                    <p>Snaps er en dansk traditionel spiritus, ofte drukket som et supplement til måltider eller ved særlige lejligheder. Med sin krydrede smag og karakteristiske aroma tilføjer snaps en festlig stemning til enhver sammenkomst. Fra traditionelle krydderier som kommen og dild til mere moderne varianter, er snaps en integreret del af dansk kultur.</p>
-                  </div>
+                  <a href="https://magn3054.github.io/drinks/long-drinks.html">
+                    <div class="label">
+                      <img src="img/snaps.webp" alt="">
+                      <h3>Snaps</h3>
+                      <p>Snaps er en dansk traditionel spiritus, ofte drukket som et supplement til måltider eller ved særlige lejligheder. Med sin krydrede smag og karakteristiske aroma tilføjer snaps en festlig stemning til enhver sammenkomst. Fra traditionelle krydderier som kommen og dild til mere moderne varianter, er snaps en integreret del af dansk kultur.</p>
+                    </div>
+                  </a>
                 </div>
               </div>
             </section>
