cocktails site made

--- a/alkoholtyper.html
+++ b/alkoholtyper.html
@@ -15,9 +15,9 @@
           <a href="https://magn3054.github.io/drinks/index.html"><img src="img/logo.svg" alt=""></a>
           <div>
             <a href="https://magn3054.github.io/drinks/cocktails.html">Cocktails</a>
-            <a href="#">Mocktails</a>
-            <a href="#">Sjusser</a>
-            <a href="#">Shots</a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html">Mocktails</a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html">Sjusser</a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html">Shots</a>
             <a class="hjem" href="https://magn3054.github.io/drinks/alkoholtyper.html">Alkoholtyper</a>
           </div>
         </nav>
@@ -27,7 +27,7 @@
             <section>              
               <div class="row">
                 <div class="column left">
-                  <a href="https://magn3054.github.io/drinks/long-drinks.html">
+                  <a href="https://magn3054.github.io/drinks/tequila.html">
                     <div class="label">
                       <img src="img/tequila.webp" alt="">
                       <h3>Tequila</h3>
@@ -36,7 +36,7 @@
                   </a>
                 </div>
                 <div class="column mid">
-                  <a href="https://magn3054.github.io/drinks/long-drinks.html">
+                  <a href="https://magn3054.github.io/drinks/stand-by.html">
                     <div class="label">
                       <img src="img/rom.webp" alt="">
                       <h3>Rom</h3>
@@ -45,7 +45,7 @@
                   </a>
                 </div>
                 <div class="column right">
-                  <a href="https://magn3054.github.io/drinks/long-drinks.html">
+                  <a href="https://magn3054.github.io/drinks/gin.html">
                     <div class="label">
                       <img src="img/gin.webp" alt="">
                       <h3>Gin</h3>
@@ -57,7 +57,7 @@
   
               <div class="row">
                 <div class="column left">
-                  <a href="https://magn3054.github.io/drinks/long-drinks.html">
+                  <a href="https://magn3054.github.io/drinks/stand-by.html">
                     <div class="label">
                       <img src="img/vodka.webp" alt="">
                       <h3>Vodka</h3>
@@ -66,7 +66,7 @@
                   </a>
                 </div>
                 <div class="column mid">
-                  <a href="https://magn3054.github.io/drinks/long-drinks.html">
+                  <a href="https://magn3054.github.io/drinks/stand-by.html">
                     <div class="label">
                       <img src="img/whiskey.webp" alt="">
                       <h3>Whiskey</h3>
@@ -75,7 +75,7 @@
                   </a>
                 </div>
                 <div class="column right">
-                  <a href="https://magn3054.github.io/drinks/long-drinks.html">
+                  <a href="https://magn3054.github.io/drinks/stand-by.html">
                     <div class="label">
                       <img src="img/snaps.webp" alt="">
                       <h3>Snaps</h3>
