sitemap and robot files added

--- a/cocktails.html
+++ b/cocktails.html
@@ -70,7 +70,7 @@
                 <div class="label">
                   <img src="img/daquiries.webp" alt="">
                   <h3>Daiquiries</h3>
-                  <p>Daiquiri drinks er forfriskende cocktails med en base af hvid rom, frisk limejuice og en smule sukker, serveret i et køligt glas. Denne klassiske cocktail er kendt for sin syrlige og søde smag, der gør den til det ideelle valg for enhver sommerfest eller afslappende eftermiddag.</p>
+                  <p>Daiquiries er forfriskende cocktails med en base af hvid rom, frisk limejuice og en smule sukker, serveret i et køligt glas. Denne klassiske cocktail er kendt for sin syrlige og søde smag, der gør den til det ideelle valg for enhver sommerfest eller afslappende eftermiddag.</p>
                 </div>
               </a>
             </div>
