--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <section>
             <div class="section-heading">
               <span class="line"></span>
-              <span class="section-text">News</span>
+              <span class="section-text">Nyheder</span>
               <span class="line"></span>
             </div>
             
