--- a/alkoholtyper.html
+++ b/alkoholtyper.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Drinkz - typer af alkohol<title>
+  <meta name="title" content="drinkz">
+  <meta name="description" content="a website for looking up drinks and their recipes, including description behind the drinks">
+  <meta name="keywords" content="drinks, cocktails, mocktails, alcohol, shots, rum, rom, tequila, vodka, recipe, recipes">
+  <meta name="robots" content="index,follow">
+  <meta name="language" content="danish">
+  <meta name="author" content="magnus damsgaard christiansen">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/page-layout.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/alkoholtyper.css">
-    <title>Typer af alkohol</title>
+    
 </head>
 <body>
     <header>
