--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Drinkz</title>
   <link rel="icon" href="img/logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="css/page-layout.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/slideshow.css">
   <link rel="stylesheet" href="css/index-main.css">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 </head>
 <body>
     <header>
