started on tequila site

--- a/alkoholtyper.html
+++ b/alkoholtyper.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-          <a href="https://magn3054.github.io/drinks/index.html"><img src="img/logo.svg" alt=""></a>
+          <a href="https://magn3054.github.io/drinks/index.html"><img src="img/logo.svg" alt="Hjemmside logo"></a>
           <div>
             <a href="https://magn3054.github.io/drinks/cocktails.html">Cocktails</a>
             <a href="https://magn3054.github.io/drinks/stand-by.html">Mocktails</a>
