--- a/cocktails.html
+++ b/cocktails.html
@@ -12,7 +12,7 @@
 <body>
     <header>
       <nav>
-        <a href="index.html"><img src="img/logo.svg" alt=""></a>
+        <a href="https://magn3054.github.io/drinks/index.html"><img src="img/logo.svg" alt="Hjemmside logo"></a>
         <div>
           <a class="hjem" href="cocktails.html">Cocktails</a>
           <a href="https://magn3054.github.io/drinks/stand-by.html">Mocktails</a>
@@ -29,7 +29,7 @@
             <div class="column left">
               <a href="https://magn3054.github.io/drinks/long-drinks.html">
                 <div class="label">
-                  <img src="img/longdrinks.webp" alt="">
+                  <img src="img/longdrinks.webp" alt="Drinks i lange smalle glas">
                   <h3>Long drinks</h3>
                   <p>Long drinks er forfriskende cocktails serveret i høje glas fyldt med is. Disse læskende drikkevarer kombinerer spiritus, sodavand eller juice og ofte friske frugter eller urter. Med deres afbalancerede smag og forfriskende konsistens er long drinks perfekte til at nyde på varme sommerdage eller som en afslappende aperitif når som helst.</p>
                 </div>
@@ -38,7 +38,7 @@
             <div class="column mid">
               <a href="https://magn3054.github.io/drinks/stand-by.html">
                 <div class="label">
-                  <img src="img/martini.webp" alt="">
+                  <img src="img/martini.webp" alt="Farverige martinier">
                   <h3>Martinier</h3>
                   <p>Martinier er elegante cocktails, der består af gin eller vodka og tør vermouth, serveret i et køligt glas. Denne klassiker er kendt for sin forfinede smag og enkelhed. Martinier tilbyder en perfekt balance mellem spiritus og vermouth, hvilket gør dem til det ideelle valg for dem, der sætter pris på tidløs elegance.</p>
                 </div>
@@ -47,7 +47,7 @@
             <div class="column right">
               <a href="https://magn3054.github.io/drinks/stand-by.html">
                 <div class="label">
-                  <img src="img/sjusser.webp" alt="">
+                  <img src="img/sjusser.webp" alt="Farverige drinks">
                   <h3>Tropiske drinks</h3>
                   <p>Tropiske drinks er en festlig blanding af eksotiske frugter, safter og spiritus, der bringer øjeblikkelig feriestemning. Fra den klassiske pina colada til forfriskende mojitos med ananas eller passionsfrugt, er disse farverige cocktails fyldt med smag og livlige nuancer, der transporterer dine smagsløg til fjerne paradisstrande.</p>
                 </div>
@@ -59,7 +59,7 @@
             <div class="column left">
               <a href="https://magn3054.github.io/drinks/stand-by.html">
                 <div class="label">
-                  <img src="img/rocks.webp" alt="">
+                  <img src="img/rocks.webp" alt="On the rocks, drinks i lave glas">
                   <h3>On the rocks</h3>
                   <p>On the rocks drinks er klassiske cocktails serveret direkte over is. Denne enkle serveringsmetode bringer en forfriskende kølighed og fortynding, der fremhæver spiritussens komplekse smagsprofil. Fra whisky on the rocks til vodka eller tequila, er disse drinks perfekte til at nyde langsomt og afslappet.</p>
                 </div>
@@ -68,7 +68,7 @@
             <div class="column mid">
               <a href="https://magn3054.github.io/drinks/stand-by.html">
                 <div class="label">
-                  <img src="img/daquiries.webp" alt="">
+                  <img src="img/daquiries.webp" alt="Daiquiries">
                   <h3>Daiquiries</h3>
                   <p>Daiquiries er forfriskende cocktails med en base af hvid rom, frisk limejuice og en smule sukker, serveret i et køligt glas. Denne klassiske cocktail er kendt for sin syrlige og søde smag, der gør den til det ideelle valg for enhver sommerfest eller afslappende eftermiddag.</p>
                 </div>
@@ -79,6 +79,5 @@
       </article>
     </main>
       <footer></footer>
-  <script src="js/slideshow.js"></script>
   </body>
   </html> 
